Added server configuration and Setup basic route to views/index.html
Installed body-parser to convert raw son to js objects.
Updated dependencies.
Added body-parser to express in expressConfig.js

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ryanhightower/BeerAppV2",
   "dependencies": {
+    "body-parser": "^1.12.3",
     "express": "^4.12.3"
   }
 }
